# cstack

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  commitlint.config.mjs  eslint.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.husky/: pre-commit
apps/cstack-cli/: .env.example  pyproject.toml
apps/cstack-cli/src/cstack_cli/: __init__.py  audit_runner.py  config.py  extract.py  logging_setup.py  main.py  narrative_runner.py  tenants.py
apps/cstack-cli/tests/: conftest.py  test_audit_cli.py  test_fixtures_cli.py  test_tenants_cli.py  test_verify_cli.py
apps/signalguard-api/: .dockerignore  Dockerfile  README.md  openapi.json  pyproject.toml
apps/signalguard-api/src/signalguard_api/: __init__.py  auth.py  config.py  correlation.py  dependencies.py  entrypoint.py  errors.py  lifespan.py  logging_setup.py  main.py  regenerate_openapi.py
apps/signalguard-api/src/signalguard_api/routers/: anomaly.py  anomaly_actions.py  audit.py  coverage.py  findings.py  health.py  models.py  narratives.py  signins.py  tenants.py  whoami.py
apps/signalguard-api/src/signalguard_api/schemas/: actions.py  anomaly.py  api_keys.py  findings.py  models.py  pagination.py  signins.py  tenant.py
apps/signalguard-api/tests/: conftest.py  test_actions.py  test_anomaly_coverage_signins.py  test_api_keys.py  test_auth.py  test_errors.py  test_findings.py  test_models.py  test_narratives.py  test_openapi.py
apps/signalguard-web/: .dockerignore  .env.local.example  .gitignore  Dockerfile  README.md  eslint.config.mjs  next.config.ts  openapi-ts.config.ts  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
apps/signalguard-web/src/app/: globals.css  layout.tsx  page.tsx
apps/signalguard-web/src/app/dashboard/: error.tsx  layout.tsx  loading.tsx  page.tsx
apps/signalguard-web/src/app/dashboard/anomalies/: error.tsx  loading.tsx  page.tsx
apps/signalguard-web/src/app/dashboard/anomalies/[signinId]/: error.tsx  loading.tsx  page.tsx
apps/signalguard-web/src/app/dashboard/findings/: error.tsx  loading.tsx  page.tsx
apps/signalguard-web/src/app/dashboard/settings/: error.tsx  layout.tsx  loading.tsx  page.tsx
apps/signalguard-web/src/app/dashboard/settings/anomaly-tuning/: page.tsx
apps/signalguard-web/src/app/dashboard/settings/api-keys/: page.tsx
apps/signalguard-web/src/app/dashboard/settings/audit-rules/: page.tsx
apps/signalguard-web/src/app/dashboard/settings/data-sync/: page.tsx
apps/signalguard-web/src/app/dashboard/settings/general/: page.tsx
apps/signalguard-web/src/app/dashboard/signalguard/: error.tsx  loading.tsx  page.tsx
apps/signalguard-web/src/components/anomaly/: AnomalyActionBar.tsx  LocationCard.tsx  MetadataRow.tsx  MetadataTable.tsx  ShapWaterfall.tsx  UserHistoryStrip.tsx  WorldMap.tsx
apps/signalguard-web/src/components/anomaly-feed/: AnomalyList.tsx  AnomalyRow.tsx  BulkActionsStrip.tsx  CountryFlag.tsx  FilterRail.tsx  ShapFeatureChip.tsx
apps/signalguard-web/src/components/anomaly-feed/__tests__/: AnomalyList.test.tsx  FilterRail.test.tsx  ShapFeatureChip.test.tsx
apps/signalguard-web/src/components/anomaly/__tests__/: MetadataTable.test.tsx  ShapWaterfall.test.tsx
apps/signalguard-web/src/components/coverage/: CoverageHeatmap.tsx  CoverageLegend.tsx  CoverageSidePanel.tsx  CoverageToolbar.tsx  ProtectionBadge.tsx
apps/signalguard-web/src/components/coverage/__tests__/: CoverageHeatmap.test.tsx  ProtectionBadge.test.tsx
apps/signalguard-web/src/components/findings/: CopyButton.tsx  EvidenceJson.tsx  ExpandedFinding.tsx  FilterChipStrip.tsx  FindingNarrative.tsx  FindingsTable.tsx  Pagination.tsx  RightRail.tsx  hooks.ts
apps/signalguard-web/src/components/findings/__tests__/: CopyButton.test.tsx  FilterChipStrip.test.tsx  FindingNarrative.test.tsx  FindingsTable.test.tsx
apps/signalguard-web/src/components/home/: ActivityRow.tsx  ModuleCard.tsx  TenantRow.tsx
apps/signalguard-web/src/components/layout/: AppShell.tsx  MobileNav.tsx  Sidebar.tsx  TopBar.tsx
apps/signalguard-web/src/components/layout/__tests__/: TopBar.test.tsx
apps/signalguard-web/src/components/overview/: AnomalySummaryRow.tsx  CoverageMatrixPreview.tsx  DataFreshnessPanel.tsx  KpiCard.tsx  SeverityBreakdownBar.tsx
apps/signalguard-web/src/components/overview/__tests__/: AnomalySummaryRow.test.tsx  CoverageMatrixPreview.test.tsx  DataFreshnessPanel.test.tsx  KpiCard.test.tsx  SeverityBreakdownBar.test.tsx
apps/signalguard-web/src/components/settings/: AnomalyTuningForm.tsx  ApiKeysPanel.tsx  AuditRuleRow.tsx  CreateApiKeyDialog.tsx  FormRow.tsx  GeneralForm.tsx  SettingsTabs.tsx  auditRules.ts
apps/signalguard-web/src/components/settings/__tests__/: AuditRuleRow.test.tsx  CreateApiKeyDialog.test.tsx  GeneralForm.test.tsx  SettingsTabs.test.tsx  auditRules.test.tsx
apps/signalguard-web/src/components/system/: ApiKeyGate.tsx  Avatar.tsx  Eyebrow.tsx  QueryProvider.tsx  SeverityBadge.tsx  Sparkline.tsx  StatusDot.tsx  TenantTile.tsx  ThemeProvider.tsx
apps/signalguard-web/src/components/system/__tests__/: ApiKeyGate.test.tsx  Avatar.test.tsx  Eyebrow.test.tsx  SeverityBadge.test.tsx  Sparkline.test.tsx  StatusDot.test.tsx
apps/signalguard-web/src/components/ui/: Button.tsx  Card.tsx  Chip.tsx  Input.tsx  Skeleton.tsx
apps/signalguard-web/src/lib/: activity.ts  format.ts  query.ts  tenant.ts
apps/signalguard-web/src/lib/api/: auth.ts  calls.ts  client.ts  key-storage.ts
apps/signalguard-web/src/test-utils/: fixtures.ts  jest-dom.d.ts  mock-api.ts  render.tsx
docs/: API.md  ARCHITECTURE.md  BACKLOG.md  CONTRIBUTING.md  DESIGN_SYSTEM.md  DESIGN_TOKENS.md  INDEX.md  LLM_OPS.md  MLOPS.md  RULES.md  SCREENSHOTS.md  SPRINT_NOTES.md
docs/images/: README.md
infra/docker/: .env.example  README.md  compose.fixtures-only.yaml  compose.yaml
scripts/: README.md  rotate-cert.ps1  setup-app-reg.ps1
(+5 files in other folders)
