[project]
name = "cstack"
version = "0.0.0"
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["apps/*", "packages/*"]

[tool.uv.sources]
cstack-schemas = { workspace = true }
cstack-storage = { workspace = true }
cstack-graph-client = { workspace = true }
cstack-fixtures = { workspace = true }
cstack-cli = { workspace = true }
cstack-audit-core = { workspace = true }
cstack-audit-coverage = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["apps", "packages"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
explicit_package_bases = true
namespace_packages = true
plugins = ["pydantic.mypy"]
mypy_path = ["packages/schemas/src", "packages/storage/src", "packages/graph-client/src", "packages/fixtures/src", "apps/cstack-cli/src"]

[tool.pydantic-mypy]
init_forbid_extra = false
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["apps", "packages"]

[[tool.mypy.overrides]]
module = [
    "msgraph",
    "msgraph.*",
    "azure.*",
    "kiota_serialization_json.*",
    "kiota_abstractions.*",
    "duckdb.*",
]
ignore_missing_imports = true
disable_error_code = ["attr-defined"]
