[project]
name = "cstack"
version = "0.0.0"
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["apps/*", "packages/*"]

[tool.uv.sources]
cstack-schemas = { workspace = true }
cstack-storage = { workspace = true }
cstack-graph-client = { workspace = true }
cstack-fixtures = { workspace = true }
cstack-cli = { workspace = true }
cstack-audit-core = { workspace = true }
cstack-audit-coverage = { workspace = true }
cstack-audit-rules = { workspace = true }
cstack-audit-exclusions = { workspace = true }
cstack-ml-features = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["apps", "packages"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
explicit_package_bases = true
namespace_packages = true
plugins = ["pydantic.mypy"]
# conftest.py duplicates across test dirs trip mypy's module-name disambiguation;
# fixtures live there and add no production typing value, so skip them.
exclude = ['/tests/conftest\.py$']
mypy_path = [
    "packages/schemas/src",
    "packages/storage/src",
    "packages/graph-client/src",
    "packages/fixtures/src",
    "packages/audit-core/src",
    "packages/audit-coverage/src",
    "packages/audit-rules/src",
    "packages/audit-exclusions/src",
    "packages/ml-features/src",
    "apps/cstack-cli/src",
]

[tool.pydantic-mypy]
init_forbid_extra = false
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["apps", "packages"]

[[tool.mypy.overrides]]
module = [
    "msgraph",
    "msgraph.*",
    "azure.*",
    "kiota_serialization_json.*",
    "kiota_abstractions.*",
    "duckdb.*",
    "shap",
    "shap.*",
    "mlflow",
    "mlflow.*",
    "scipy",
    "scipy.*",
    "sklearn.*",
    "joblib",
    "joblib.*",
    "pandas",
    "pandas.*",
]
ignore_missing_imports = true
disable_error_code = ["attr-defined"]
