[project]
name = "cstack-cli"
version = "0.0.1"
description = "Click-based CLI for cstack signalguard ingest and tenant management"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pydantic-settings>=2.6",
    "python-json-logger>=2.0",
    "cstack-graph-client",
    "cstack-storage",
    "cstack-schemas",
    "cstack-fixtures",
    "cstack-audit-core",
    "cstack-audit-coverage",
    "cstack-audit-rules",
    "cstack-audit-exclusions",
]

[project.scripts]
cstack = "cstack_cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cstack_cli"]
