[project]
name = "signalguard-api"
version = "0.0.1"
description = "FastAPI HTTP surface over the cstack signalguard data and audit packages"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136",
    "uvicorn[standard]>=0.32",
    "click>=8.1",
    "python-json-logger>=2.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "cstack-schemas",
    "cstack-storage",
    "cstack-audit-core",
    "cstack-audit-coverage",
    "cstack-audit-rules",
    "cstack-audit-exclusions",
    "cstack-fixtures",
    "cstack-ml-features",
    "cstack-ml-mlops",
    "cstack-ml-anomaly",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "asgi-lifespan>=2.1",
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[project.scripts]
signalguard-api = "signalguard_api.entrypoint:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signalguard_api"]
